crates/crates_io_tarball/src/snapshots/crates_io_tarball__tests__lib_with_bins_and_example-2.snap
---
source: crates/crates_io_tarball/src/lib.rs
expression: bins
---
[
    Product {
        path: Some(
            "src/bin/bar.rs",
        ),
        name: Some(
            "bar",
        ),
        test: true,
        doctest: true,
        bench: true,
        doc: true,
        plugin: false,
        proc_macro: false,
        harness: true,
        edition: None,
        required_features: [],
        crate_type: None,
    },
    Product {
        path: Some(
            "src/bin/foo.rs",
        ),
        name: Some(
            "foo",
        ),
        test: true,
        doctest: true,
        bench: true,
        doc: true,
        plugin: false,
        proc_macro: false,
        harness: true,
        edition: None,
        required_features: [],
        crate_type: None,
    },
]
