crates/crates_io_tarball/src/snapshots/crates_io_tarball__tests__lib_with_bins_and_example-3.snap
---
source: crates/crates_io_tarball/src/lib.rs
expression: examples
---
[
    Product {
        path: Some(
            "examples/how-to-use-foo.rs",
        ),
        name: Some(
            "how-to-use-foo",
        ),
        test: true,
        doctest: true,
        bench: true,
        doc: true,
        plugin: false,
        proc_macro: false,
        harness: true,
        edition: None,
        required_features: [],
        crate_type: None,
    },
]
