crates/crates_io_tarball/src/snapshots/crates_io_tarball__tests__lib_with_bins_and_example.snap
---
source: crates/crates_io_tarball/src/lib.rs
expression: tarball_info
---
TarballInfo {
    manifest: Manifest {
        package: Some(
            Package {
                name: "foo",
                edition: None,
                version: Some(
                    Local(
                        "0.0.1",
                    ),
                ),
                build: None,
                authors: None,
                links: None,
                description: None,
                homepage: None,
                documentation: None,
                readme: None,
                keywords: None,
                categories: None,
                license: None,
                license_file: None,
                repository: None,
                rust_version: None,
                autolib: None,
                autobins: None,
                autoexamples: None,
                autotests: None,
                autobenches: None,
            },
        ),
        dependencies: None,
        dev_dependencies: None,
        build_dependencies: None,
        target: None,
        features: None,
        bin: [
            Product {
                path: Some(
                    "src/bin/bar.rs",
                ),
                name: Some(
                    "bar",
                ),
                test: true,
                doctest: true,
                bench: true,
                doc: true,
                plugin: false,
                proc_macro: false,
                harness: true,
                edition: None,
                required_features: [],
                crate_type: None,
            },
            Product {
                path: Some(
                    "src/bin/foo.rs",
                ),
                name: Some(
                    "foo",
                ),
                test: true,
                doctest: true,
                bench: true,
                doc: true,
                plugin: false,
                proc_macro: false,
                harness: true,
                edition: None,
                required_features: [],
                crate_type: None,
            },
        ],
        bench: [],
        test: [],
        example: [
            Product {
                path: Some(
                    "examples/how-to-use-foo.rs",
                ),
                name: Some(
                    "how-to-use-foo",
                ),
                test: true,
                doctest: true,
                bench: true,
                doc: true,
                plugin: false,
                proc_macro: false,
                harness: true,
                edition: None,
                required_features: [],
                crate_type: Some(
                    [
                        "bin",
                    ],
                ),
            },
        ],
        patch: None,
        lib: Some(
            Product {
                path: Some(
                    "src/lib.rs",
                ),
                name: Some(
                    "foo",
                ),
                test: true,
                doctest: true,
                bench: true,
                doc: true,
                plugin: false,
                proc_macro: false,
                harness: true,
                edition: None,
                required_features: [],
                crate_type: Some(
                    [
                        "lib",
                    ],
                ),
            },
        ),
    },
    target_metadata: TargetMetadata {
        build_script: None,
        library: Some(
            LibraryMetadata {
                source: SourceFile {
                    path: "src/lib.rs",
                    exists: true,
                },
                name: "foo",
                is_proc_macro: false,
            },
        ),
        binaries: [
            BinaryMetadata {
                source: SourceFile {
                    path: "src/bin/bar.rs",
                    exists: true,
                },
                name: "bar",
            },
            BinaryMetadata {
                source: SourceFile {
                    path: "src/bin/foo.rs",
                    exists: true,
                },
                name: "foo",
            },
        ],
    },
    vcs_info: None,
}
