crates/crates_io_tarball/src/snapshots/crates_io_tarball__tests__process_tarball_test_incomplete_vcs_info.snap
---
source: crates/crates_io_tarball/src/lib.rs
expression: tarball_info
---
TarballInfo {
    manifest: Manifest {
        package: Some(
            Package {
                name: "foo",
                edition: None,
                version: Some(
                    Local(
                        "0.0.1",
                    ),
                ),
                build: None,
                authors: None,
                links: None,
                description: None,
                homepage: None,
                documentation: None,
                readme: None,
                keywords: None,
                categories: None,
                license: None,
                license_file: None,
                repository: None,
                rust_version: None,
                autolib: None,
                autobins: None,
                autoexamples: None,
                autotests: None,
                autobenches: None,
            },
        ),
        dependencies: None,
        dev_dependencies: None,
        build_dependencies: None,
        target: None,
        features: None,
        bin: [],
        bench: [],
        test: [],
        example: [],
        patch: None,
        lib: None,
    },
    target_metadata: TargetMetadata {
        build: None,
        lib: None,
        bins: [],
    },
    vcs_info: Some(
        CargoVcsInfo {
            path_in_vcs: "",
        },
    ),
}
