crates/crates_io_tarball/src/snapshots/crates_io_tarball__tests__process_tarball_test_manifest.snap
---
source: crates/crates_io_tarball/src/lib.rs
expression: tarball_info
---
TarballInfo {
    manifest: Manifest {
        package: Some(
            Package {
                name: "foo",
                edition: None,
                version: Some(
                    Local(
                        "0.0.1",
                    ),
                ),
                build: None,
                authors: None,
                links: None,
                description: None,
                homepage: None,
                documentation: None,
                readme: Some(
                    Local(
                        String(
                            "README.md",
                        ),
                    ),
                ),
                keywords: None,
                categories: None,
                license: None,
                license_file: None,
                repository: Some(
                    Local(
                        "https://github.com/foo/bar",
                    ),
                ),
                rust_version: Some(
                    Local(
                        "1.59",
                    ),
                ),
                autolib: None,
                autobins: None,
                autoexamples: None,
                autotests: None,
                autobenches: None,
            },
        ),
        dependencies: None,
        dev_dependencies: None,
        build_dependencies: None,
        target: None,
        features: None,
        bin: [],
        bench: [],
        test: [],
        example: [],
        patch: None,
        lib: None,
    },
    target_metadata: TargetMetadata {
        build_script: None,
        library: None,
        binaries: [],
    },
    vcs_info: None,
}
